<resources>
    <string name="app_name"></string>
    <string name="action_settings">Settings</string>
    <string name="mobile_prompt">Mobile Number</string>
    <string name="next_button">Next</string>
    <string name="enter_phone">Please enter your phone\n number including your\n international prefix:</string>
    <string name="confirmation_code">Confirmation Code:</string>
    <string name="enter_code">Enter Code</string>
    <string name="confirm_code">Confirmation\n Code:</string>
    <string name="full_name">Full Name</string>
    <string name="start_text">Start</string>
</resources>
