<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="#000000"
    tools:context="com.xxx.MainActivity"
    tools:showIn="@layout/activity_main">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbackground"
        android:paddingTop="22dp"
        android:paddingBottom="22dp"
        android:layout_marginTop="66dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_phone"
            android:id="@+id/textView1"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText1"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/textView1"
            android:hint="@string/mobile_prompt"
            android:inputType="number"
            app:layout_widthPercent="50%"
            android:background="@drawable/shapes"/>
        <Button
            app:layout_widthPercent="30%"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText1"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/next_button"
            android:onClick="nextClick"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedbutton"
            android:textColor="#FFFFFF"
            android:layout_width="wrap_content" />
    </android.support.percent.PercentRelativeLayout>
</android.support.percent.PercentRelativeLayout>
